<resources>

    <string name="app_name">test4</string>
    <string name="id">ID</string>
    <string name="phonenumber">phonenumber</string>
    <string name="pass">pass</string>
    <string name="name">name</string>
    <string name="for_admin">for admin</string>
    <string name="for_manag_employ">for manag/employ</string>
    <string name="create">create</string>
    <string name="title_activity_test_del">test_del</string>
    <string name="title_activity_test_del2">test_del2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">1</string>
    <string name="menu_gallery">2</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add_item">add_item</string>

    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="addproduct">AddProduct</string>
    <string name="add">add</string>
    <string name="button">Button</string>
    <string name="home">Home</string>
    <bool name="cameraPreviewShouldFillView">true</bool>
    <string name="title_activity_manyfunc"></string>
    <string name="title_activity_mannagerfunc"></string>
    <string name="product">product</string>
    <string name="add_product">add product</string>
    <string name="zone">zone</string>
    <string name="ok">ok</string>
    <string name="productname">ProductName</string>
    <string name="_1000">1000</string>
    <string name="_1">1</string>
    <string name="export">Export</string>
    <string name="todo">TODO</string>
    <string name="add_team">Add Team</string>
    <string name="refresh_button">Refresh</string>
</resources>
