<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/amount"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameproduct"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/segoe"
        android:text="@string/_1" />

    <TextView
        android:id="@+id/priceproduct"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="229dp"
        android:layout_marginLeft="229dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/segoe"
        android:text="@string/_1000" />

    <TextView
        android:id="@+id/nameproduct"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="230dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="10dp"
        android:text="@string/productname"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="79dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/todo"
        android:fontFamily="@font/segoe"
        app:srcCompat="@drawable/demon1" />

    <TextView
        android:id="@+id/tx_type"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/segoe"
        android:text="@string/export" />
</RelativeLayout>